kubernetes/apps/default/nginx-test/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-test
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "test.${SECRET_DOMAIN}"
spec:
  parentRefs:
    - name: external
      namespace: kube-system
  hostnames:
    - "test.${SECRET_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nginx-test
          port: 80
          weight: 1
